add smoke test / rename package